--- a/website/front/src/app/i18n/locales/fr/home.json
+++ b/website/front/src/app/i18n/locales/fr/home.json
@@ -1,4 +1,4 @@
 {
-  "hero-title": "Les résultats de MTYM sont disponibles!",
+  "hero-title": "Les résultats de MFA sont disponibles!",
   "hero-subtitle": "Préparez-vous à être défié et inspiré en participant au tournoi, en assistant aux conférences et en rencontrant des personnes exceptionnelles."
 }
