--- a/website/front/src/app/i18n/locales/en/home.json
+++ b/website/front/src/app/i18n/locales/en/home.json
@@ -1,5 +1,4 @@
 {
-  "hero-title": "The national math competition for highschool students is back!",
-  "hero-subtitle": "Prepare to be challenged and inspired as you compete, attend conferences and meet exceptional people",
-  "hero-title-results": "The results for MMC 2024 are available!"
+  "hero-title": "First physics event of Math&Maroc is finally here !",
+  "hero-subtitle": "Prepare to be challenged and inspired as you compete, attend conferences and meet exceptional people"
 }
