--- a/website/front/src/app/i18n/locales/fr/home.json
+++ b/website/front/src/app/i18n/locales/fr/home.json
@@ -1,4 +1,4 @@
 {
-  "hero-title": "Les inscriptions sont ouvertes!  Candidatez avant le 25 Mai ! ",
+  "hero-title": "Les inscriptions sont ouvertes!  Candidatez avant le 08 juin 2025 ! ",
   "hero-subtitle": "Préparez vos esprits à être stimulés par des cours et ateliers enrichissants en physique, et saisissez l’opportunité de rencontrer des étudiants marocains des plus grandes écoles, spécialisés dans ce domaine d’excellence."
 }
